--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+
 name: reflectify
 description: A futuristic journaling app
 publish_to: "none"
@@ -9,20 +10,37 @@ dependencies:
   flutter:
     sdk: flutter
 
-  glass_kit: ^2.0.1
-  table_calendar: ^3.0.9  
-  intl: ^0.19.0    # For date formatting
-  flutter_riverpod: ^3.0.3  
-  cupertino_icons: ^1.0.5
+  table_calendar: ^3.1.3
+  intl: ^0.19.0
+  flutter_riverpod: ^3.0.3
+  cupertino_icons: ^1.0.8
   firebase_core: ^4.2.0
   firebase_auth: ^6.1.1
   firebase_database: ^12.0.3
-  provider: ^6.1.5
+  provider: ^6.1.5+1
   riverpod: ^3.0.3
-  image_picker: ^1.1.1
+  image_picker: ^1.2.0
   geolocator: ^14.0.2
   fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
+flutter:
+  uses-material-design: true
+
+fonts:
+  - family: BebasNeue
+    fonts:
+      - asset: fonts/BebasNeue-Regular.ttf
+      
+
+  - family: Lato
+    fonts:
+      - asset: fonts/Lato-Regular.ttf
+      
+
+  
+
