--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,12 @@ dependencies:
   image_picker: ^1.2.0
   geolocator: ^14.0.2
   fl_chart: ^1.1.1
+  glass_kit: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^3.0.0
 
 
 flutter:
