--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   image_picker: ^1.2.0
   geolocator: ^14.0.2
   fl_chart: ^1.1.1
-  glass_kit: ^3.0.0
+  glass_kit: ^3.0.0  # RE-ADDED
 
 dev_dependencies:
   flutter_test:
@@ -37,7 +37,6 @@ flutter:
       fonts:
         - asset: fonts/BebasNeue-Regular.ttf
         
-  
     - family: Lato
       fonts:
         - asset: fonts/Lato-Regular.ttf
