--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  table_calendar: ^3.1.3
-  intl: ^0.19.0
+  table_calendar: ^3.2.0
+  intl: ^0.20.2
   flutter_riverpod: ^3.0.3
   cupertino_icons: ^1.0.8
   firebase_core: ^4.2.0
@@ -21,13 +21,20 @@ dependencies:
   image_picker: ^1.2.0
   geolocator: ^14.0.2
   fl_chart: ^1.1.1
-  glass_kit: ^3.0.0 
-  uuid: ^4.5.1 # RE-ADDED
+  glass_kit: ^4.0.2
+  uuid: ^4.5.1
+  shared_preferences: ^2.3.4
+  flutter_local_notifications: ^19.5.0
+  timezone: ^0.10.1
+  flutter_slidable: ^4.0.3
+  percent_indicator: ^4.2.3
+  http: ^1.2.2
+  markdown: ^7.2.2  # Replacing discontinued flutter_markdown
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
 
 flutter:
@@ -35,6 +42,7 @@ flutter:
 
   assets:
     - assets/grid.jpg
+    - assets/bg_mad.jpg
 
   fonts:
     - family: BebasNeue
