--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_database: ^12.0.3
   provider: ^6.1.5+1
   riverpod: ^3.0.3
+  state_notifier: ^1.0.0
   image_picker: ^1.2.0
   geolocator: ^14.0.2
   fl_chart: ^1.1.1
