--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: reflectify
 description: A futuristic journaling app
 publish_to: "none"
+version: 1.0.0+1
 
 environment:
   sdk: '>=3.9.0 <4.0.0'
