--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,3 +66,6 @@ flutter_launcher_icons:
   background_color: "#000000"
   adaptive_icon_background: "#000000"
   adaptive_icon_foreground: "assets/momento_logo.jpg"
+  # Add padding to prevent cutoff (percentage from edges)
+  min_sdk_android: 21
+  adaptive_icon_padding: 0.25  # 25% padding to prevent cutoff on all devices
